--- a/src/components/product-search-item/product-search-item.styles.scss
+++ b/src/components/product-search-item/product-search-item.styles.scss
@@ -30,8 +30,99 @@
   display: flex;
 }
 
-//////////////////////////////////////
+///////////////////////////////////////////
 
+// .product-card-overlay {
+//   position: absolute;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+//   background-color: #ddd;
+//   overflow: hidden;
+//   width: 0;
+//   height: 100%;
+//   z-index: 15;
+
+// }
+
+// .product-card-addInfo {
+//   white-space: nowrap;
+//   color: red;
+//   font-size: 20px;
+//   position: absolute;
+//   overflow: hidden;
+//   top: 50%;
+//   left: 50%;
+//   z-index: 15;
+
+// }
+
+// .leftside-product-item:hover .product-card-overlay {
+//   width: inherit;
+//   border-radius: inherit;
+//   border-radius: 10px 50% 50% 10px;
+//   // object-fit: contain;
+// }
+///////////////////////////////////////////////////////
+
+.product-card-overlay {
+  background: rgba(255, 255, 255, 0.3);
+  box-shadow: 1px 8px 32px 0 rgba(65, 66, 83, 0.37);
+  backdrop-filter: blur(3.5px);
+  // -webkit-backdrop-filter: blur(10.5px);
+  border-radius: 10px;
+  border: 0px solid rgba(255, 255, 255, 0.18);
+
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  width: 0;
+  height: 100%;
+  z-index: 15;
+
+  transform: scaleX(0.95);
+  transform-origin: left;
+
+  transition: linear 0.1s;
+}
+
+.product-card-addinfo {
+  // white-space: nowrap;
+  white-space: pre-wrap;
+  line-height: normal;
+  color: black;
+  font-size: 12px;
+  font-weight: 400;
+  position: relative;
+  margin-top: 10%;
+  top: 50%;
+  left: 50%;
+  height: 140px; //used to be 75%
+  width: 165px; //used to be 90%
+  padding: 0% 17% 0% 0%;
+  z-index: 15;
+
+  text-align: start;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  // max-width: 30ch;
+
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
+
+.leftside-product-item:hover .product-card-overlay {
+  max-width: 100%;
+  width: inherit;
+  border-radius: inherit;
+  border-radius: 10px 50% 50% 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+////////////////////////////////////////////////////
 .leftside-product-item {
   width: 66%;
   height: inherit;
@@ -52,21 +143,32 @@
   object-fit: contain;
   // margin-left: 1rem;
 }
-
-.corner-product-card-logo {
+#corner-product-card-div {
   position: absolute;
   height: 20%;
-  width: 45%;
-  object-fit: contain;
+  width: 40%;
   top: 5px;
-  left: 5px;
+  left: 10px;
+  z-index: 99;
+
+  clear: both;
+  text-align: right;
+}
+
+.corner-product-card-logo {
+  // position: absolute;
+
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
+  object-position: 0%;
 }
 
 .product-card-badge {
   position: absolute;
   height: 20px;
   width: 50px;
-  top: 45px;
+  top: 50px;
   left: 10px;
   z-index: 12;
 
@@ -78,7 +180,7 @@
   position: absolute;
   height: fit-content;
   width: fit-content;
-  top: 70px;
+  top: 75px;
   left: 10px;
   z-index: 12;
 
