--- a/src/components/navbar-floating/navbar-floating.styles.scss
+++ b/src/components/navbar-floating/navbar-floating.styles.scss
@@ -18,24 +18,15 @@
   height: 30%;
   border-radius: 20px;
 
-  // background: rgba( 0, 0, 0, 0.6 );
-  // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  // backdrop-filter: blur( 5px );
-  // -webkit-backdrop-filter: blur( 5px );
-  // border: 1px solid rgba( 255, 255, 255, 0.18 );
-
-  // background: rgba( 255, 255, 255, 0.5 );
-  // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  // backdrop-filter: blur( 7.5px );
-  // -webkit-backdrop-filter: blur( 7.5px );
-  // border: 1px solid rgba( 255, 255, 255, 0.18 );
-
   background: rgba(0, 0, 0, 0.55);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(10.5px);
   -webkit-backdrop-filter: blur(10.5px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+
+  transform: translateZ(0);
+  will-change: opacity;
 }
 
 .navbar-card {
@@ -68,6 +59,8 @@
   -webkit-backdrop-filter: blur(10.5px);
   border-radius: 10px;
   border: 1px solid rgba(255, 255, 255, 0.18);
+  transform: translateZ(0);
+  will-change: opacity;
 
   transform: scale(1, 1);
   transition: 0s;
