--- a/src/pages/product-page/product-page.styles.scss
+++ b/src/pages/product-page/product-page.styles.scss
@@ -10,6 +10,10 @@
   justify-content: space-between;
 }
 
+.fade {
+  opacity: 1 !important;
+}
+
 .product-page-product-display-container {
   width: 100%;
   display: flex;
